# Data-Science-Graph-Analytics

dio-neo4j-music-recommendation-graph/: .gitignore  README.md  pyproject.toml
dio-neo4j-music-recommendation-graph/cypher/: 01_constraints.cypher  02_load_nodes.cypher  03_load_relationships.cypher  04_business_queries.cypher  05_recommendation_queries.cypher
dio-neo4j-music-recommendation-graph/data/00-raw/: artists.csv  genres.csv  tracks.csv  user_followed_artists.csv  user_liked_tracks.csv  user_listened_tracks.csv  users.csv
dio-neo4j-music-recommendation-graph/docs/: business_questions.md  graph_model.md  troubleshooting.md
dio-neo4j-music-recommendation-graph/scripts/: generate_sample_data.py
